<resources>
    <string name="app_name">CourseRegistration</string>
    <string name="bmsce_logo">bmsce_logo</string>
    <string name="bmsce_name">B.M.S College of Engineering</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="courseregistration">Course Registration</string>
    <string name="admin_login_text">Admin Login</string>
    <string name="admin_username">admin</string>
    <string name="admin_login">Login</string>
    <string name="admin_welcome">Welcome Admin</string>
    <string name="admin_add_course">Add Course</string>
    <string name="admin_edit_courses">Edit Courses</string>
    <string name="admin_view_list">View List</string>
    <string name="admin_add_courses">Add Courses</string>
    <string name="admin_course_name_input">Course name</string>
    <string name="admin_course_code_input">Course Code</string>
    <string name="admin_add_course_incharge_email">incharge email</string>
    <string name="admin_add_course_incharge_name">Incharge Name</string>
    <string name="admin_add_course_sem">Sem</string>
    <string name="admin_add_course_type_name">Course Type</string>
    <string name="admin_add_course_core">Core</string>
    <string name="admin_add_course_elective">Elective</string>
    <string name="admin_add_course_time">Name</string>
    <string name="admin_add_course_date">Date</string>
    <string name="admin_add_course_time_button">Time</string>
    <string name="admin_add_course_date_button">Date</string>
    <string name="admin_add_course_submit_button">Submit</string>
    <string name="admin_edit_text_header">Edit Courses</string>
    <string name="admin_edit_course_submit_button">Edit</string>
    <string name="admin_edit_course_time">Time</string>
    <string name="admin_edit_course_date">Date</string>
    <string name="student_login_name">Student Login</string>
    <string name="student_register">Register</string>
    <string name="student_register_text">Dont have an account?</string>
    <string name="student_login_button">Login</string>
    <string name="Student_registration">Register</string>
    <string name="student_username">Name</string>
    <string name="student_usn">usn</string>
    <string name="student_sem">sem</string>
    <string name="student_section">section</string>
    <string name="student_email">email</string>
    <string name="student_password">confirm</string>
    <string name="student_register_button">Register</string>
    <string name="admin_time_text">Time</string>
    <string name="admin_date_text">date</string>
    <string name="admin_edit_courses_name">Edit Course</string>
    <string name="admin_edit_course_course_code">Code</string>
    <string name="admin_edit_course_incharge_name">Incharge Name</string>
    <string name="admin_edit_course_incharge_email">Incharge email</string>
    <string name="adminn_edit_course_course_type">Course Type</string>
    <string name="admin_edit_course_radio1">Core</string>
    <string name="admin_edit_ourse_radio2">Elective</string>
    <string name="admin_edit_course_time_text">time</string>
    <string name="admin_edit_course_time_button">Time</string>
    <string name="admin_edit_course_date_text">date</string>
    <string name="admin_edit_course_date_button">Date</string>
    <string name="admin_edit_course_button">Edit</string>
    <string name="admin_edit_course_sem">sem</string>
    <string name="admin_edit_course_delete_button">Delete</string>
    <string name="admin_view_list_heading">View List</string>
    <string name="admin_view_button">View</string>
    <string name="admin_view_list_export_button">Export</string>
    <string name="student_dashboard_title">Welcome</string>
    <string name="student_dashboard_register_button">Register</string>
    <string name="student_dashboard_profile_button">Profile</string>
</resources>